<resources>
    <string name="app_name">NSUTS</string>
    <string name="title_activity_maps">Map</string>
    <!--dimes for design 3-->
    <dimen name="headerTextSize">22sp</dimen>
    <dimen name="newsMoreTextSize">12sp</dimen>
    <dimen name="loginCardRadius">20dp</dimen>
    <dimen name="loginViewsMargin">20dp</dimen>

    <dimen name="signup_text_margin_top">10dp</dimen>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NSU ID</string>
    <string name="nav_header_subtitle">nsu.email@northsouth.edu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Book Now</string>
    <string name="menu_slideshow">Schedule</string>
    <string name="menu_tools">Support</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Logout</string>
    <string name="login_Confirmpassword_hint">Confirm Password</string>
    <string name="menu_info">Info</string>
    <string name="submit">submit</string>


</resources>
