<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nsu499.nsuts.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.nsu499.nsuts.ui.booking.BookingFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.nsu499.nsuts.ui.schedule.ScheduleFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.nsu499.nsuts.ui.support.SupportFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.nsu499.nsuts.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

</navigation>