<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">
    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <EditText
            android:id="@+id/nsuID"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:inputType="number"
            android:maxLines="1"
            android:hint="NSU ID"/>

            <EditText
                android:id="@+id/RegisterEmail"
                style="@style/modifiedEditText"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"/>

            <EditText
                android:id="@+id/contact"
                style="@style/modifiedEditText"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:inputType="number"
                android:maxLines="1"
                android:hint="Mobile"/>

            <EditText
                android:id="@+id/RegisterPassword"
                style="@style/modifiedEditText"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"/>
        <EditText
            android:id="@+id/RegisterConfirmPassword"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:hint="@string/login_Confirmpassword_hint"
            android:maxLines="1"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/register_button"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Submit"
            android:textColor="#00a5ff" />
        <Button
            android:id="@+id/RegisterToLogin"
            style="@style/parent"
            android:background="@android:color/transparent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
